TVT-001 fix bugs, improve speed, add db-refetch button